<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/degradado"
    tools:context=".GestionarInfoCoche">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblMarcaG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblMarca"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtMarcaG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblModeloG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblModelo"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtModeloG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblKmG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblKilometros"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtKilometrosG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|textPersonName"
                        android:numeric="integer"
                        android:selectAllOnFocus="true"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblPrecioG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblPrecio"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtPrecioG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|textPersonName"
                        android:numeric="integer"
                        android:onClick="limpiarCampo"
                        android:selectAllOnFocus="true"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblPotenciaG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblPotencia"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtPotenciaG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|textPersonName"
                        android:numeric="integer"
                        android:selectAllOnFocus="true"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblCambioG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCambio"
                        android:textSize="24sp" />

                    <Spinner
                        android:id="@+id/txtCambioG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblPuertasG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblPuertas"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtPuertaG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|textPersonName"
                        android:numeric="integer"
                        android:selectAllOnFocus="true"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblPlazasG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblPlazas"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtPlazasG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|textPersonName"
                        android:numeric="integer"
                        android:selectAllOnFocus="true"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblCombustibleG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTituloCombustible"
                        android:textSize="24sp" />

                    <Spinner
                        android:id="@+id/txtCombustibleG"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                    </Spinner>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblDescripcionG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblDescripcion"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtDescripcionG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine|textPersonName"
                        android:nestedScrollingEnabled="false"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/btnTomarFoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"

                        android:backgroundTint="#0E5893"
                        android:onClick="comprobarPermisos"
                        android:text="Tomar foto"
                        app:backgroundTint="@color/teal_700"
                        app:icon="@android:drawable/sym_action_call" />

                    <ImageView
                        android:id="@+id/imgCocheNuevo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="16dp"
                    android:backgroundTint="#0E5893"
                    android:onClick="guardarCoche"
                    android:text="Guardar"
                    app:backgroundTint="@color/teal_700"
                    app:icon="@android:drawable/sym_action_call" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>