<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InfoCoche"
    tools:showIn="@layout/activity_info_coche">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblPrecioInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="40dp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/darker_gray" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="@dimen/fab_margin">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgCombustible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="-20dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/diesel" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="114dp"
                        android:layout_height="match_parent"
                        android:paddingLeft="-40dp"
                        app:srcCompat="@drawable/iconkilometros" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/iconpotencia" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblCombustible"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="45dp"
                        android:gravity="center"
                        android:text="@string/lblTituloCombustible" />

                    <TextView
                        android:id="@+id/lblTituloKilometros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="50dp"
                        android:text="@string/lblKilometros" />

                    <TextView
                        android:id="@+id/lblTituloPotencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/lblPotencia" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblValorCombustible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="45dp"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblValorKilometros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="50dp"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblValorPotencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="-20dp"
                        app:srcCompat="@drawable/iconcambio" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="-40dp"
                        app:srcCompat="@drawable/iconpuertas" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/iconplazas" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblCambio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="45dp"
                        android:gravity="center"
                        android:text="@string/lblCambio" />

                    <TextView
                        android:id="@+id/lblPuertas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="50dp"
                        android:gravity="center"
                        android:text="@string/lblPuertas" />

                    <TextView
                        android:id="@+id/lblPlazas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/lblPlazas" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblValorCambio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="45dp"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblValorPuertas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="50dp"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblValorPlazas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/lblDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginBottom="10dp"
                android:text="Descripción:"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginBottom="10dp"
                android:text="TextView"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnFavorito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#0E5893"
                    android:hapticFeedbackEnabled="true"
                    android:onClick="btnFavorito_Click"
                    android:text="Favorito"
                    app:backgroundTint="@color/teal_700"
                    app:icon="@android:drawable/star_on" />

                <Button
                    android:id="@+id/btnLlamar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:backgroundTint="#0E5893"
                    android:onClick="comprobarPermisos"
                    android:text="Llamar"
                    app:backgroundTint="@color/teal_700"
                    app:icon="@android:drawable/sym_action_call" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>